# vocabulary

./: .gitignore  CMakeLists.txt  README.md  android_build.sh  android_build_and_run.sh  android_config.sh  android_init.sh  android_init_and_build.sh  android_run.sh  build.sh  build_config.sh  code.sh  dependencies.sh  deploy.sh  deps_scenario.sh  external_config.sh  file_utils.py  file_utils.sh  get_dependencies.sh  group.cmake  jni_CMakeLists.txt.replace  log.sh  main.cpp  main_lua.cpp  main_sdl_imgui.cpp  net_utils.sh  pre_build.sh  run.sh  set_android_environment.sh  update_build_system.sh  update_cmake_modules.sh  update_scripts.sh
ImGui-SDL/: CMakeLists.txt  build_and_deploy.sh  deploy.ps1  deploy.sh  deps_scenario.sh  main_imgui_test.cpp  main_sdl_imgui.cpp
ImGui-SDL/android/: .gitignore  android_config.sh  build.sh  build_and_run.sh  config.sh  file_utils.py  init.sh  init_and_build.sh  init_build_run.sh  run.sh  set_android_environment.sh  uninstall.sh
ImGui-SDL/android/app/: build.gradle
ImGui-SDL/android/app/jni/jni_bridge/: CMakeLists.txt
ImGui-SDL/android/app/jni/jni_bridge/src/: bridge.cpp
ImGui-SDL/android/app/src/main/java/com/skalexey/vocabulary/: MainActivity.java
ImGui-SDL/cmake_modules/: deps.cmake  log.cmake  module.cmake  modules.cmake  platforms.cmake
ImGui-SDL/include/: app.h
ImGui-SDL/include/ui/views/: play_random_word_window.h
ImGui-SDL/src/: app.cpp
ImGui-SDL/src/ui/views/: play_random_word_window.cpp
QtGUI/: .gitignore  CMakeLists.txt  QtGUI.qmlproject  QtGUI.qmlproject.qtds  build_and_deploy.sh  deploy.bat  deploy.ps1  deploy.py  deploy.sh  deps_scenario.sh  pre_build.sh  qmlcomponents  qmlmodules  qtquickcontrols2.conf
QtGUI/android/: android_config.sh  build.sh  build_cmake.sh  build_project.sh  configure_cmake.sh  deploy.sh  log.txt  qt_build_cmake.sh  run.sh
QtGUI/cmake_modules/: build_directory.cmake  deps.cmake  files.cmake  module.cmake  modules.cmake
QtGUI/content/: App.qml  CMakeLists.txt  Screen01.ui.qml
QtGUI/imports/: CMakeLists.txt
QtGUI/imports/QtGUI/: CMakeLists.txt  Constants.qml  Dialog.qml  Label.qml  Text.qml  TextInput.qml  qmldir
QtGUI/imports/QtGUI/designer/: plugin.metainfo
QtGUI/include/: app.h  bridge.h
QtGUI/include/ui/views/: play_random_word_window.h
QtGUI/src/: app.cpp  bridge.cpp  main.cpp
QtGUI/src/ui/views/: play_random_word_window.cpp
android/: MainActivity.java  android.log.txt  android_build.sh  android_config.sh  android_init.sh  android_init_and_build.sh  android_init_build_run.sh  android_run.sh  build.gradle.replace  build.sh  build_and_run.sh  get_device_id.sh  get_log.sh  set_android_environment.sh  vocabulary_log.txt
android/app/jni/activity/: Java_com_skalexey_vocabulary_MainActivity.cpp
android/app/jni/jni_bridge/: CMakeLists.txt
android/app/jni/jni_bridge/include/: bridge.h
android/app/jni/jni_bridge/src/: bridge.cpp
android/app/src/main/: AndroidManifest.xml
android/app/src/main/java/com/skalexey/vocabulary/: MainActivity.java
assets/: .gitignore  random_words.lua  words.txt
core/: CMakeLists.txt  update_build_system.sh  update_scripts.sh
core/assets/: words.txt  words.txt.last
core/cmake_modules/: deps.cmake  files.cmake  module.cmake  src.cmake
core/include/: app.h  fwd.h  word.h  words.h
core/include/ui/: node.h
core/include/ui/controllers/: library_controller.h  main_menu_controller.h  new_word_controller.h  play_random_word_controller.h  settings_controller.h  test_menu_controller.h  view_controller.h  workspace_menu_controller.h
core/include/ui/views/: library_window.h  main_menu.h  new_word_window.h  play_random_word_window.h  settings_window.h  test_menu.h  workspace_menu.h  workspace_menu_top_bar.h
core/src/: app.cpp  word.cpp  words.cpp
core/src/ui/: node.cpp
core/src/ui/controllers/: library_controller.cpp  main_menu_controller.cpp  new_word_controller.cpp  play_random_word_controller.cpp  settings_controller.cpp  test_menu_controller.cpp  view_controller.cpp  workspace_menu_controller.cpp
core/src/ui/views/: library_window.cpp  main_menu.cpp  new_word_window.cpp  play_random_word_window.cpp  settings_window.cpp  test_menu.cpp  workspace_menu.cpp  workspace_menu_top_bar.cpp
gcloud/: .gitignore  api.py  auth.ps1  get_access_token.ps1  get_credentials.ps1  get_credentials.sh  helper.sh  login.sh
include/: App.h  app.h  word.h  words.h
include/ui/controllers/: PlayRandomWordController.h  WindowController.h  play_random_word_controller.h  window_controller.h
include/ui/views/: PlayRandomWordWindow.h  play_random_word_window.h
serverside/: .gitignore  log.sh  pull_php_includes.sh  serverside_config_tpl.sh  setup_environment.sh  ssh.sh  ssh_connect.sh  update_scripts.sh
serverside/vocabulary/: a.php  h.php  l.php  s.php  u.php
src/: app.cpp  word.cpp  words.cpp
src/ui/controllers/: PlayRandomWordController.cpp  play_random_word_controller.cpp
src/ui/views/: PlayRandomWordWindow.cpp
